--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,3 +1,4 @@
-= javascript_pack_tag 'hello_vue'
-%h1 Home#index
-%p Find me in app/views/home/index.html.erb
+#app
+  %navbar
+
+= javascript_pack_tag 'todo'
